--- a/gifnjam/package.json
+++ b/gifnjam/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.0",
+    "moment": "^2.18.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-throttle": "^0.3.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5",
