--- a/gifnjam/package.json
+++ b/gifnjam/package.json
@@ -6,7 +6,10 @@
     "axios": "^0.16.0",
     "moment": "^2.18.1",
     "react": "^15.4.2",
+    "react-collapse": "^2.3.3",
     "react-dom": "^15.4.2",
+    "react-height": "^2.2.0",
+    "react-motion": "^0.4.7",
     "react-throttle": "^0.3.0"
   },
   "devDependencies": {
